--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <li>Not all electric cars are cheap</li>
                 </ul>
               <ul>
-                <li>Just because a electric car is cheaper than a normal gas car doesn’t mean everyone can afford it!</li>
+                <li>Even if owning a electric car is cheaper than a normal gas car doesn’t mean everyone can afford it!</li>
                 </ul>
               <ul>
                 <li>There are parts in Electric cars that can be replaced with a cheaper aternative</li>
