--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </ul>
               <ul>
                 <ul>
-                <li>Can charge your car from home so you don't need to waste your time going to a gas station</li>
+                <li>Can charge your car from home so you don't need to waste your time going to a charging station</li>
                 </ul>
               </ul>
               <ul>
